--- a/process/combine pts and lbs/try new feature method suggested by Duane.ipynb
+++ b/process/combine pts and lbs/try new feature method suggested by Duane.ipynb
@@ -303,47 +303,58 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-15T09:25:53.828295Z",
-     "start_time": "2024-08-15T09:25:52.977548Z"
+     "end_time": "2024-08-20T06:24:49.119400Z",
+     "start_time": "2024-08-20T06:24:48.021897Z"
     }
    },
    "cell_type": "code",
    "source": "aa = process_Duane_feature1(img2, pts1, X1, size)",
    "id": "6d541549b96718ce",
    "outputs": [],
-   "execution_count": 108
+   "execution_count": 115
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-15T09:26:03.767470Z",
-     "start_time": "2024-08-15T09:26:03.759470Z"
+     "end_time": "2024-08-20T06:27:30.262303Z",
+     "start_time": "2024-08-20T06:27:30.094313Z"
     }
    },
    "cell_type": "code",
-   "source": "",
+   "source": "plt.imshow(img1)",
    "id": "747c8906b3936ab8",
-   "outputs": [],
-   "execution_count": 108
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.image.AxesImage at 0x1413b9aba00>"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 121
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-15T09:25:39.466022Z",
-     "start_time": "2024-08-15T09:25:38.414502Z"
+     "end_time": "2024-08-20T06:24:50.706671Z",
+     "start_time": "2024-08-20T06:24:50.312374Z"
     }
    },
    "cell_type": "code",
    "source": "plot_pca(aa, 2, lbs=lbs1)",
    "id": "213cbdadf66c99cd",
    "outputs": [],
-   "execution_count": 107
+   "execution_count": 116
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-15T09:30:11.248972Z",
-     "start_time": "2024-08-15T09:30:08.454560Z"
+     "end_time": "2024-08-20T06:32:07.616597Z",
+     "start_time": "2024-08-20T06:32:04.729543Z"
     }
    },
    "cell_type": "code",
@@ -372,13 +383,13 @@
      ]
     }
    ],
-   "execution_count": 113
+   "execution_count": 123
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-15T09:28:34.654106Z",
-     "start_time": "2024-08-15T09:28:31.624714Z"
+     "end_time": "2024-08-20T06:25:50.743804Z",
+     "start_time": "2024-08-20T06:25:47.521331Z"
     }
    },
    "cell_type": "code",
@@ -407,20 +418,28 @@
      ]
     }
    ],
-   "execution_count": 111
+   "execution_count": 118
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "82b410a77570325f"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-15T09:30:12.920788Z",
-     "start_time": "2024-08-15T09:30:12.754793Z"
+     "end_time": "2024-08-20T06:32:15.519573Z",
+     "start_time": "2024-08-20T06:32:13.279349Z"
     }
    },
    "cell_type": "code",
    "source": "app1 = interactive_clusters(xy, img2, pts[mask1], ps[mask1], lbs=lbs1, s=1, max_samples=10000)",
    "id": "b15dfd0ad45222e1",
    "outputs": [],
-   "execution_count": 114
+   "execution_count": 124
   },
   {
    "metadata": {},
