add new figures

--- a/notebooks/explore manifold using FR tsne and umap/dimension reduction layout.ipynb
+++ b/notebooks/explore manifold using FR tsne and umap/dimension reduction layout.ipynb
@@ -6,14 +6,15 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-11T05:31:34.260764Z",
-     "start_time": "2024-09-11T05:31:33.352156Z"
+     "end_time": "2024-09-11T15:05:47.569265Z",
+     "start_time": "2024-09-11T15:05:47.550333Z"
     }
    },
    "source": [
     "%matplotlib qt\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from matplotlib.colors import hsv_to_rgb\n",
     "from mtflearn.clustering import gmm_lbs\n",
     "from mtflearn.io import load_image\n",
     "from stemplot import imshow, colors_from_lbs\n",
@@ -21,20 +22,19 @@
     "from mtflearn.utils import normalize_image, remove_bg\n",
     "from mtflearn.manifold import ForceGraph8\n",
     "from sklearn.manifold import TSNE as tsne\n",
-    "from stemplot.colors import color_palette\n",
+    "from stemplot.colors import color_palette,xy2colors\n",
     "from skimage.transform import resize\n",
-    "from stemplot.utils import plot_pca\n",
     "from stemplot.interactive import interactive_clusters\n",
     "import umap"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 23
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-11T05:31:34.910249Z",
-     "start_time": "2024-09-11T05:31:34.810940Z"
+     "end_time": "2024-09-11T14:00:00.779614Z",
+     "start_time": "2024-09-11T14:00:00.676314Z"
     }
    },
    "cell_type": "code",
@@ -45,13 +45,13 @@
    ],
    "id": "f77c352da5f537d",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-11T05:31:35.158037Z",
-     "start_time": "2024-09-11T05:31:35.135114Z"
+     "end_time": "2024-09-11T14:00:00.795555Z",
+     "start_time": "2024-09-11T14:00:00.780604Z"
     }
    },
    "cell_type": "code",
@@ -65,13 +65,13 @@
    ],
    "id": "53d2587904fd2095",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-11T05:31:36.490484Z",
-     "start_time": "2024-09-11T05:31:36.419711Z"
+     "end_time": "2024-09-11T14:00:00.858980Z",
+     "start_time": "2024-09-11T14:00:00.796552Z"
     }
    },
    "cell_type": "code",
@@ -83,7 +83,7 @@
    ],
    "id": "807622f8d3fc2347",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -94,47 +94,47 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-11T05:37:11.769620Z",
-     "start_time": "2024-09-11T05:37:11.756663Z"
+     "end_time": "2024-09-11T14:00:01.727245Z",
+     "start_time": "2024-09-11T14:00:01.715284Z"
     }
    },
    "cell_type": "code",
    "source": "tsne_X1 = X1 = (moments.data)[mask1][:, 1:]",
    "id": "e2830f245e199c2a",
    "outputs": [],
-   "execution_count": 14
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-11T05:37:21.368698Z",
-     "start_time": "2024-09-11T05:37:12.157483Z"
+     "end_time": "2024-09-11T14:00:13.101420Z",
+     "start_time": "2024-09-11T14:00:02.258708Z"
     }
    },
    "cell_type": "code",
    "source": "tsne_res = tsne(n_components=2).fit_transform(tsne_X1)",
    "id": "7a7682a08f891603",
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-11T05:37:21.430584Z",
-     "start_time": "2024-09-11T05:37:21.370205Z"
+     "end_time": "2024-09-11T14:00:13.177386Z",
+     "start_time": "2024-09-11T14:00:13.102921Z"
     }
    },
    "cell_type": "code",
    "source": "tsne_lbs = gmm_lbs(tsne_res,10)",
    "id": "ef25551dcb5e7fb3",
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-11T03:29:38.078649Z",
-     "start_time": "2024-09-11T03:29:37.783199Z"
+     "end_time": "2024-09-11T14:00:14.612769Z",
+     "start_time": "2024-09-11T14:00:13.930325Z"
     }
    },
    "cell_type": "code",
@@ -144,13 +144,13 @@
    ],
    "id": "b566eac5b1d12d8c",
    "outputs": [],
-   "execution_count": 28
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-11T05:38:03.634822Z",
-     "start_time": "2024-09-11T05:38:01.486816Z"
+     "end_time": "2024-09-11T14:44:07.240929Z",
+     "start_time": "2024-09-11T14:44:05.339836Z"
     }
    },
    "cell_type": "code",
@@ -163,7 +163,7 @@
    ],
    "id": "91c85347c2c1dd03",
    "outputs": [],
-   "execution_count": 17
+   "execution_count": 18
   },
   {
    "metadata": {
@@ -439,6 +439,230 @@
    "execution_count": null,
    "source": "",
    "id": "9be47565fa85c0ab"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "3acb52bc70b07934"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### ",
+   "id": "7cade5f652ab26b1"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T15:11:05.989691Z",
+     "start_time": "2024-09-11T15:11:05.976735Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def xy2colors_fix_raduis(xy, v=0.9, return_rgb=True):\n",
+    "    # Calculate the angles from xy coordinates\n",
+    "    angles = (np.arctan2(xy[:, 1], xy[:, 0]) + np.pi) / (2 * np.pi)\n",
+    "\n",
+    "    # Since we want colors to vary only with angle, we create a constant saturation\n",
+    "    # and use the same value for brightness.\n",
+    "    # The saturation here is set to 1 for maximum color intensity.\n",
+    "    saturation = np.ones_like(angles)  # S = 1 for all points\n",
+    "    value = np.ones_like(angles) * v   # V = v for all points\n",
+    "\n",
+    "    # Construct the HSV color representation\n",
+    "    hsv_colors = np.vstack([angles, saturation, value]).T\n",
+    "\n",
+    "    # Convert to RGB if required\n",
+    "    if return_rgb:\n",
+    "        return hsv_to_rgb(hsv_colors)\n",
+    "    else:\n",
+    "        return hsv_colors\n",
+    "\n",
+    "def xy2colors_fix_angle(xy, v=0.9, return_rgb=True):\n",
+    "    # Compute the radius and normalize it\n",
+    "    radius = np.hypot(xy[:, 0], xy[:, 1])\n",
+    "    max_radius = np.max(radius)\n",
+    "    if max_radius > 0:\n",
+    "        radius = radius / max_radius\n",
+    "\n",
+    "    # Since we want colors to vary only with radius, we create a constant hue\n",
+    "    # and use the same value for brightness.\n",
+    "    # The hue here is set based on the normalized radius.\n",
+    "    hue = radius  # H = radius for all points\n",
+    "    saturation = np.ones_like(radius)  # S = 1 for all points\n",
+    "    value = np.ones_like(radius) * v   # V = v for all points\n",
+    "\n",
+    "    # Construct the HSV color representation\n",
+    "    hsv_colors = np.vstack([hue, saturation, value]).T\n",
+    "\n",
+    "    # Convert to RGB if required\n",
+    "    if return_rgb:\n",
+    "        return hsv_to_rgb(hsv_colors)\n",
+    "    else:\n",
+    "        return hsv_colors"
+   ],
+   "id": "2bd2fefbfaa1633f",
+   "outputs": [],
+   "execution_count": 29
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "710c4d9d952ae97a"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T14:40:38.946852Z",
+     "start_time": "2024-09-11T14:40:38.932898Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "polar = xy2colors(tsne_res, v=0.9, return_rgb=True)",
+   "id": "63e36ec0684b6e07",
+   "outputs": [],
+   "execution_count": 10
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T14:44:30.966539Z",
+     "start_time": "2024-09-11T14:44:30.753042Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "fig,ax = plt.subplots(figsize=(7.2,7.2))\n",
+    "ax.scatter(tsne_res[:,0],tsne_res[:,1],c=polar,s=5)\n",
+    "plt.savefig('tsne polar.png',transparent=True)"
+   ],
+   "id": "c5489a7559bb7d05",
+   "outputs": [],
+   "execution_count": 20
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T14:44:16.456130Z",
+     "start_time": "2024-09-11T14:44:14.546440Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "fig,ax = plt.subplots(figsize=(7.2,7.2))\n",
+    "ax.imshow(img,cmap = 'gray')\n",
+    "ax.scatter(pts[mask1][:,0],pts[mask1][:,1],c = polar,s=7)\n",
+    "ax.axis('off')\n",
+    "plt.savefig('img with tsne polar color.png',dpi = 700,transparent=True)"
+   ],
+   "id": "370dc853c6364a9f",
+   "outputs": [],
+   "execution_count": 19
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T15:05:55.082548Z",
+     "start_time": "2024-09-11T15:05:55.066405Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "r_polar = xy2colors_fix_raduis(tsne_res,v = 0.9,return_rgb=True)",
+   "id": "7cbe6c2f1ed6db80",
+   "outputs": [],
+   "execution_count": 24
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T15:06:39.926876Z",
+     "start_time": "2024-09-11T15:06:39.712253Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "fig,ax = plt.subplots(figsize=(7.2,7.2))\n",
+    "ax.scatter(tsne_res[:,0],tsne_res[:,1],c=r_polar,s=5)\n",
+    "plt.savefig('tsne polar fix raduis.png',transparent=True)"
+   ],
+   "id": "aa6a0e3ee01b80f5",
+   "outputs": [],
+   "execution_count": 26
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T15:07:03.084886Z",
+     "start_time": "2024-09-11T15:07:01.099864Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "fig,ax = plt.subplots(figsize=(7.2,7.2))\n",
+    "ax.imshow(img,cmap = 'gray')\n",
+    "ax.scatter(pts[mask1][:,0],pts[mask1][:,1],c = r_polar,s=7)\n",
+    "ax.axis('off')\n",
+    "plt.savefig('img with tsne polar color fix radius.png',dpi = 700,transparent=True)"
+   ],
+   "id": "e30f676289a12d1d",
+   "outputs": [],
+   "execution_count": 27
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T15:11:08.355433Z",
+     "start_time": "2024-09-11T15:11:08.342476Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "a_polar = xy2colors_fix_angle(tsne_res,v = 0.9,return_rgb=True)",
+   "id": "cf6cf3e5d1e2c351",
+   "outputs": [],
+   "execution_count": 30
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T15:11:44.967812Z",
+     "start_time": "2024-09-11T15:11:44.775920Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "fig,ax = plt.subplots(figsize=(7.2,7.2))\n",
+    "ax.scatter(tsne_res[:,0],tsne_res[:,1],c=a_polar,s=5)\n",
+    "plt.savefig('tsne polar fix angle.png',transparent=True)"
+   ],
+   "id": "b9538d073fdac44e",
+   "outputs": [],
+   "execution_count": 32
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T15:11:57.828063Z",
+     "start_time": "2024-09-11T15:11:55.863001Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "fig,ax = plt.subplots(figsize=(7.2,7.2))\n",
+    "ax.imshow(img,cmap = 'gray')\n",
+    "ax.scatter(pts[mask1][:,0],pts[mask1][:,1],c = a_polar,s=7)\n",
+    "ax.axis('off')\n",
+    "plt.savefig('img with tsne polar color fix angle.png',dpi = 700,transparent=True)"
+   ],
+   "id": "53d6fe20b0b7c113",
+   "outputs": [],
+   "execution_count": 33
   }
  ],
  "metadata": {
