--- a/notebooks/explore manifold using FR tsne and umap/dimension reduction layout.ipynb
+++ b/notebooks/explore manifold using FR tsne and umap/dimension reduction layout.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-11T15:05:47.569265Z",
-     "start_time": "2024-09-11T15:05:47.550333Z"
+     "end_time": "2024-09-16T15:11:05.277934Z",
+     "start_time": "2024-09-16T15:10:59.349802Z"
     }
    },
    "source": [
@@ -28,13 +28,13 @@
     "import umap"
    ],
    "outputs": [],
-   "execution_count": 23
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-11T14:00:00.779614Z",
-     "start_time": "2024-09-11T14:00:00.676314Z"
+     "end_time": "2024-09-16T15:11:05.385500Z",
+     "start_time": "2024-09-16T15:11:05.279928Z"
     }
    },
    "cell_type": "code",
@@ -50,8 +50,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-11T14:00:00.795555Z",
-     "start_time": "2024-09-11T14:00:00.780604Z"
+     "end_time": "2024-09-16T15:11:05.415515Z",
+     "start_time": "2024-09-16T15:11:05.386496Z"
     }
    },
    "cell_type": "code",
@@ -59,7 +59,8 @@
     "if img.shape[0] == 2048:\n",
     "    img = resize(img, (1024, 1024), order=0)\n",
     "img = normalize_image(img)\n",
-    "mask1 = np.logical_or(lbs==0, lbs==1)\n",
+    "# mask1 = np.logical_or(lbs==0, lbs==1)\n",
+    "mask1 = lbs==0\n",
     "mask2 = np.logical_or(lbs==2, lbs==3)\n",
     "size = 29"
    ],
@@ -70,8 +71,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-11T14:00:00.858980Z",
-     "start_time": "2024-09-11T14:00:00.796552Z"
+     "end_time": "2024-09-16T15:11:05.536970Z",
+     "start_time": "2024-09-16T15:11:05.465854Z"
     }
    },
    "cell_type": "code",
@@ -94,8 +95,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-11T14:00:01.727245Z",
-     "start_time": "2024-09-11T14:00:01.715284Z"
+     "end_time": "2024-09-16T15:11:05.551914Z",
+     "start_time": "2024-09-16T15:11:05.537960Z"
     }
    },
    "cell_type": "code",
@@ -107,8 +108,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-11T14:00:13.101420Z",
-     "start_time": "2024-09-11T14:00:02.258708Z"
+     "end_time": "2024-09-16T15:11:16.410412Z",
+     "start_time": "2024-09-16T15:11:05.553907Z"
     }
    },
    "cell_type": "code",
@@ -663,6 +664,254 @@
    "id": "53d6fe20b0b7c113",
    "outputs": [],
    "execution_count": 33
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "1388a67096e28302"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "3d37f29b3a8d9809"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-16T15:15:07.805345Z",
+     "start_time": "2024-09-16T15:15:07.790394Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def sector_indices(xy,sector_number = 11):\n",
+    "    angles = np.arctan2(xy[:, 1], xy[:, 0])\n",
+    "    sector_boundaries = np.linspace(-np.pi, np.pi, sector_number)\n",
+    "    grouped_indices = []\n",
+    "    for i in range(len(sector_boundaries)-1):\n",
+    "        start = sector_boundaries[i]\n",
+    "        end = sector_boundaries[i+1]\n",
+    "        indices = np.where((angles >= start) & (angles < end))\n",
+    "        grouped_indices.append(indices)\n",
+    "        # grouped_points.append(xy[indices])\n",
+    "    return grouped_indices\n",
+    "\n",
+    "def radial_indices(xy,radial_number = 6):\n",
+    "    radius = np.hypot(xy[:, 0], xy[:, 1])\n",
+    "    max_radius = np.max(radius)\n",
+    "    radial_boundaries = np.linspace(0, max_radius, radial_number)\n",
+    "    grouped_indices = []\n",
+    "    for i in range(len(radial_boundaries)-1):\n",
+    "        start = radial_boundaries[i]\n",
+    "        end = radial_boundaries[i+1]\n",
+    "        indices = np.where((radius >= start) & (radius < end))\n",
+    "        grouped_indices.append(indices)\n",
+    "    return grouped_indices\n",
+    "\n",
+    "def sector_features(xy,grouped_indices):\n",
+    "    grouped_features = []\n",
+    "    for indices in grouped_indices:\n",
+    "        grouped_features.append(xy[indices])\n",
+    "    return grouped_features\n",
+    "\n",
+    "def sector_pts(pts,grouped_indices):\n",
+    "    grouped_pts = []\n",
+    "    for indices in grouped_indices:\n",
+    "        grouped_pts.append(pts[indices])\n",
+    "    return grouped_pts\n",
+    "\n",
+    "def sector_ps(ps,grouped_indices,mean = True):\n",
+    "    grouped_ps = []\n",
+    "    for indices in grouped_indices:\n",
+    "        grouped_ps.append(ps[indices])\n",
+    "    new_ps = []\n",
+    "    if mean:\n",
+    "        for g in grouped_ps:\n",
+    "            new_ps.append(np.mean(g,axis = 0))\n",
+    "        return new_ps\n",
+    "    else:\n",
+    "        return grouped_ps\n"
+   ],
+   "id": "a64c2542c139e0da",
+   "outputs": [],
+   "execution_count": 10
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-16T15:15:04.373655Z",
+     "start_time": "2024-09-16T15:15:04.345243Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "pts = pts[mask1]\n",
+    "ps = ps[mask1]"
+   ],
+   "id": "c963ed372fb4cad6",
+   "outputs": [],
+   "execution_count": 9
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-16T09:25:50.709397Z",
+     "start_time": "2024-09-16T09:25:50.682484Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "grouped_indices = sector_indices(tsne_res)\n",
+    "grouped_features = sector_pts(tsne_res,grouped_indices)\n",
+    "grouped_pts = sector_pts(pts,grouped_indices)\n",
+    "grouped_ps = sector_ps(ps,grouped_indices)"
+   ],
+   "id": "4f1036fe6accdf83",
+   "outputs": [],
+   "execution_count": 88
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-16T09:22:47.874614Z",
+     "start_time": "2024-09-16T09:22:47.861657Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "tsne_res.shape,pts.shape,ps.shape",
+   "id": "cd64c7ec0f25b9dc",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((4114, 2), (4114, 2), (4114, 29, 29))"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 80
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-16T15:15:36.219049Z",
+     "start_time": "2024-09-16T15:15:36.207089Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "colors = plt.get_cmap('tab10')",
+   "id": "969e06bc4dc3584f",
+   "outputs": [],
+   "execution_count": 12
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-16T09:28:03.123838Z",
+     "start_time": "2024-09-16T09:28:03.059594Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "for idx,[select_pts,select_features,select_ps] in enumerate(zip(grouped_pts,grouped_features,grouped_ps)):\n",
+    "    fig,ax = plt.subplots(1,3,figsize=(15,5))\n",
+    "    ax[0].imshow(img,cmap = 'gray')\n",
+    "    ax[0].axis('off')\n",
+    "    ax[0].scatter(select_pts[:,0],select_pts[:,1],color = colors(idx),s = 7)\n",
+    "    ax[1].scatter(tsne_res[:,0],tsne_res[:,1],color='black',s = 3)\n",
+    "    ax[1].scatter(select_features[:,0],select_features[:,1],color = colors(idx),s=3)\n",
+    "    ax[2].imshow(select_ps,cmap = 'gray',vmin = select_ps.min(),vmax = select_ps.max()+0.1)\n",
+    "    ax[2].axis('off')\n",
+    "    plt.savefig('sector {}.png'.format(idx),dpi = 700)\n",
+    "    plt.close(fig)"
+   ],
+   "id": "59c6aa8b73bf0ee1",
+   "outputs": [],
+   "execution_count": 94
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "93e4cf3b89fff78e"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-16T15:25:23.099542Z",
+     "start_time": "2024-09-16T15:25:23.059645Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "grouped_indices = radial_indices(tsne_res,radial_number = 8)\n",
+    "grouped_features = sector_pts(tsne_res,grouped_indices)\n",
+    "grouped_pts = sector_pts(pts,grouped_indices)\n",
+    "grouped_ps = sector_ps(ps,grouped_indices)"
+   ],
+   "id": "e20a62c0e34d7fe9",
+   "outputs": [],
+   "execution_count": 18
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-16T15:18:18.580091Z",
+     "start_time": "2024-09-16T15:17:56.232766Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "for idx,[select_pts,select_features,select_ps] in enumerate(zip(grouped_pts,grouped_features,grouped_ps)):\n",
+    "    fig,ax = plt.subplots(1,3,figsize=(15,5))\n",
+    "    ax[0].imshow(img,cmap = 'gray')\n",
+    "    ax[0].axis('off')\n",
+    "    ax[0].scatter(select_pts[:,0],select_pts[:,1],color = colors(idx),s = 7)\n",
+    "    ax[1].scatter(tsne_res[:,0],tsne_res[:,1],color='black',s = 3)\n",
+    "    ax[1].scatter(select_features[:,0],select_features[:,1],color = colors(idx),s=3)\n",
+    "    ax[2].imshow(select_ps,cmap = 'gray',vmin = select_ps.min(),vmax = select_ps.max()+0.1)\n",
+    "    ax[2].axis('off')\n",
+    "    plt.savefig('radial {}.png'.format(idx),dpi = 700)\n",
+    "    plt.close(fig)"
+   ],
+   "id": "96593abd96727725",
+   "outputs": [],
+   "execution_count": 16
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-16T15:25:14.755763Z",
+     "start_time": "2024-09-16T15:25:14.742806Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "len(grouped_ps)",
+   "id": "4ca82fabab9f9d2d",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 17
   }
  ],
  "metadata": {
